# SnakeForWin

./: CMakeLists.txt  main.c
game/: game.c  game.h
userData/: userData.c  userData.h
